Docker modification and new requests
Docker was modified tryng to get it to work on any machine. Also requests for finding users by ID and listing all existing users have been created.
api.yaml updated
Json collection for testing available.
