# src/main/java/co/edu/unal/software_engineering/labs/auth/configuration/ResourceServerConfiguration.java
@@ -9,7 +9,7 @@ import org.springframework.security.oauth2.config.annotation.web.configuration.R
 @EnableResourceServer
 public class ResourceServerConfiguration extends ResourceServerConfigurerAdapter{
 
-    private final static String[] publicResources = new String[]{ "/registro/**", "/roles", "/login" };
+    private final static String[] publicResources = new String[]{ "/registro/**", "/roles", "/login", "/usuarios" , "/buscarUsuario/**" };
     private final static String[] userResources = new String[]{ "/usuario/**" };
     private final static String[] teacherResources = new String[]{ "/profesor/**" };
     private final static String[] studentResources = new String[]{ "/estudiante/**" };
